Avoid duplicating a principle ID.

--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@ people than it would have been through other methods.
 
 <div class="practice">
 <p>
-  <span class="practicelab" id="principle-vulnerability">
+  <span class="practicelab" id="principle-sensitive">
     System designers
     should not assume that particular information is or is not sensitive.
     Whether information is considered sensitive can vary depending on a
