--- a/index.html
+++ b/index.html
@@ -1084,11 +1084,18 @@ according to their [=users=]' wishes.
 ## Data Minimization {#data-minimization}
 
 <div class="practice">
-<span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
-should minimize the amount of [=personal data=] they transfer. [=User agents=]
-should share data only when it helps a user's goals and
-interests. Web APIs should be designed to minimize the amount of data that
-sites need to request.</span>
+<div class="practice"><span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
+should minimize the amount of [=personal data=] they transfer.</span></div>
+
+<div class="practice"><span class="practicelab">Web APIs should be designed to minimize the amount of data that
+sites need to request.</span></div>
+
+<div class="practice">
+<span class="practicelab">In maintaining duties of [=duty of
+protection|protection=], [=duty of discretion|discretion=] and [=duty of loyalty|loyalty=], user agents should share data only when it either is needed
+to satisfy a user's immediate goals or aligns with the user's wishes and
+interests.</span>
+</div>
 </div>
 
 Data minimization limits the risks of data being disclosed or misused. It also
