--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@ the data exposed, is to autogenerate a new email address for each context.
 ### Ancillary uses
 
 In order to uphold the principle of [[[#data-minimization]]], [=sites=] and
-[=user agents=] should seek to understand people's goals and preferences about
+[=user agents=] should seek to understand and respect people's goals and preferences about
 use of data about them.
 
 [=Sites=] sometimes use data in ways that aren't needed for the user's immediate
