--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ however, they are used as a way to avoid putting in the difficult work of decidi
 types of [=processing=] are [=appropriate=] and which are not, offloading [=privacy labour=]
 to the people using a system.
 
-In specific cases, [=people=] should be able to [=consent=] to data sharing that would
+[=People=] should be able to [=consent=] to data sharing that would
 otherwise be restricted, such as granting access to their pictures or geolocation.
 [=Actors=] need to take care that their users are [*informed*](#consent-principles) when
 granting this [=consent=] and *aware* enough about what's going on that they can know to
