--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ must first define some terms and explain what we mean by privacy.
 
 The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
 net positive social benefit</i>" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
-Web serves people is by protecting them from surveillance and the types of manipulation that data can
+Web serves people is by seeking to protect them from surveillance and the types of manipulation that data can
 enable.
 
 The Web is a social and technical system made up of [=information flows=]. Because this document
