--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@ passes the review smoothly.
 This is a document containing technical guidelines. However, in order to put those guidelines in context we
 must first define some terms and explain what we mean by privacy.
 
-The Web is for everyone ([[?For-Everyone]]). It is "<i>a platform that helps people and provides a
+The Web is for everyone ([[?For-Everyone]]). It should be "<i>a platform that helps people and provides a
 net positive social benefit</i>" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
 Web serves people is by seeking to protect them from surveillance and the types of manipulation that data can
 enable.
