'move sentence up'

--- a/index.html
+++ b/index.html
@@ -565,11 +565,12 @@ the victim.
 When an [=actor=] can collect [=data=] about a [=person=] and process it automatically, and that
 [=person=] cannot automatically protect their [=data=] and prevent its processing ([=automation asymmetry=])
 this creates an imbalance of power that favors that [=actor=] and decreases the [=person=]'s agency.
+This document focuses on the impact that [=data=] [=processing=] can have on people, but it can also
+impact other [=actors=], such as companies or governments.
 
 It is important to keep in mind that not all people are equal in how they can resist
 an imbalance of power: some [=people=] are more [=vulnerable=] and therefore in greater
-need of protection. This document focuses on the impact that [=data=] [=processing=] can
-have on people, but it can also impact other [=actors=], such as companies or governments.
+need of protection.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=]. When
 [=people=] are involved in [=information flows=], [=data governance=] determines how
