--- a/index.html
+++ b/index.html
@@ -572,8 +572,8 @@ It is important to keep in mind that not all people are equal in how they can re
 an imbalance of power: some [=people=] are more [=vulnerable=] and therefore in greater
 need of protection.
 
-<dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=]. When
-[=people=] are involved in [=information flows=], [=data governance=] determines how
+<dfn data-lt="governance">Data governance</dfn> is the system of principles that regulate [=information flows=].
+[=Data governance=] determines how
 which [=actors=] can collect which [=data=] and how they may, must, or must not [=process=] it
 ([[?GKC-Privacy]], [[?IAD]]). This document provides building blocks for [=data governance=]
 that puts the interests of [=people=] first.
