--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ need of protection.
 [=Data governance=] determines how
 which [=actors=] can collect which [=data=] and how they may, must, or must not [=process=] it
 ([[?GKC-Privacy]], [[?IAD]]). This document provides building blocks for [=data governance=]
-that puts the interests of [=people=] first.
+that puts [=people=] first.
 
 Principles vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]).
 For instance, people have different expectations of [=privacy=] at work, at a café, or at home. Understanding and
