--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ permissive, but that does not make them neutral. All privacy principles have an 
 [=people=] and we must therefore determine which principles best align with ethical Web values in
 Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
-<dfn data-lt='information'>Information flows</dfn> are information exchanged or processed by
+<dfn>Information flows</dfn> are information exchanged or processed by
 [=actors=]. Information flows can be seen from different perspectives: there is the flow of
 information <em>about</em> a person (the subject) being processed or transmitted to any other
 actor, and there is the flow of information <em>towards</em> a person (the recipient).
