--- a/index.html
+++ b/index.html
@@ -593,10 +593,9 @@ permissive, but that does not make them neutral. All privacy principles have an 
 Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn>Information flows</dfn> are information exchanged or processed by
-[=actors=]. Information flows can be seen from different perspectives: there is the flow of
-information <em>about</em> a person (the subject) being processed or transmitted to any other
-actor, and there is the flow of information <em>towards</em> a person (the recipient).
-Recipients can have their privacy violated in multiple ways such as unexpected shocking images,
+[=actors=]. A person's privacy can be harmed both by their information flowing from them to
+other actors and by information flowing toward them. Examples of the latter include:
+unexpected shocking images,
 loud noises while they intend to sleep, manipulative information, interruptive
 messages when their focus is on something else, or harassment when they seek social interactions.
 (In some of these cases, the information may not be [=personal data=].)
