--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ people involved in the information flow.
 
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own personal will,
 without undue influence from other [=actors=]. People have limited intellectual resources and
-time with which to weigh decisions, and have to rely on shortcuts when making decisions. This makes it possible
+time with which to weigh decisions, and they have to rely on shortcuts when making decisions. This makes it possible
 to manipulate their preferences, including privacy preferences ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]).
 A [=person=]'s [=autonomy=] is improved by a system when that system offers a shortcut that is closer to what
 that [=person=] would have decided given unlimited time and intellectual ability; and [=autonomy=] is decreased
