--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@ without undue influence from other [=actors=]. People have limited intellectual 
 time with which to weigh decisions, and they have to rely on shortcuts when making decisions. This makes it possible
 to manipulate their preferences, including their privacy preferences ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]).
 A [=person=]'s [=autonomy=] is improved by a system when that system offers a shortcut that is closer to what
-that [=person=] would have decided given unlimited time and intellectual ability; and [=autonomy=] is decreased
+that [=person=] would have decided given unlimited time and intellectual ability. [=Autonomy=] is decreased
 when a similar shortcut goes against decisions made under these ideal conditions.
 
 Affordances and interactions that decrease [=autonomy=] are known as <dfn data-lt="dark pattern|dark patterns">deceptive patterns</dfn> (or dark patterns).
