--- a/index.html
+++ b/index.html
@@ -627,9 +627,8 @@ when a similar shortcut goes against decisions made under these ideal conditions
 
 Affordances and interactions that decrease [=autonomy=] are known as <dfn data-lt="dark pattern|dark patterns">deceptive patterns</dfn> (or dark patterns).
 A [=deceptive pattern=] does not have to be intentional ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
-When building something that may impact people's [=autonomy=], it is important to review the product from
-multiple independent perspectives to make sure that it does not introduce [=deceptive patterns=]
-that may not be obvious to its creator.
+When building something that may impact people's [=autonomy=], it is important that reviewers
+from multiple independent perspectives check that it does not introduce [=deceptive patterns=].
 
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 it is impossible for people to have detailed control over how their data is processed.
