--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@ from multiple independent perspectives check that it does not introduce [=decept
 
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 it is impossible for people to have detailed control over how their data is processed.
-This fact should not be confused with the idea that privacy is dead. Studies show that
+This fact does not imply that privacy is dead. Studies show that
 [=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless
 and have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
 carefully, we can give people greater [=autonomy=] with respect to their own [=data=]. This is
