--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@ Given the large volume of potential [=data=]-related decisions in today's data e
 it is impossible for people to have detailed control over how their data is processed.
 This fact does not imply that privacy is dead. Studies show that
 [=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless
-and have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
+and like they have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
 carefully, we can give people greater [=autonomy=] with respect to their own [=data=]. This is
 done by setting [=appropriate=], privacy-protective defaults and user-friendly choice
 architectures.
