--- a/index.html
+++ b/index.html
@@ -633,8 +633,8 @@ from multiple independent perspectives check that it does not introduce [=decept
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 it is impossible for people to have detailed control over how their data is processed.
 This fact does not imply that privacy is dead. Studies show that
-[=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless
-and like they have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
+[=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless,
+and sense that they have lost agency ([[?Privacy-Concerned]]). If we design out technological infrastructure
 carefully, we can give people greater [=autonomy=] with respect to their own [=data=]. This is
 done by setting [=appropriate=], privacy-protective defaults and user-friendly choice
 architectures.
