--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@ This fact does not imply that privacy is dead. Studies show that
 [=people=] remain concerned over how their [=data=] is [=processed=], that they feel powerless,
 and sense that they have lost agency ([[?Privacy-Concerned]]). If we design our technological infrastructure
 carefully, we can give people greater [=autonomy=] with respect to their own [=data=]. This is
-done by setting [=appropriate=], privacy-protective defaults and user-friendly choice
+done by setting [=appropriate=], privacy-protective defaults and designing user-friendly choice
 architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
