--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ Several kinds of mechanisms exist to enable [=people=] to control how they inter
 with data-processing systems. Mechanisms that increase the number of [=purposes=] for which
 their [=data=] is being [=processed=] or the amount of their [=data=] that is [=processed=]
 are referred to as [=opt-in=] or <dfn data-lt="opt in|opt-in">consent</dfn>. Mechanisms
-that decrease this number of [=purposes=] or amount of [=data=] being [=processed=] are known as
+that decrease this number of [=purposes=] or the amount of [=data=] being [=processed=] are known as
 <dfn data-lt="opt out">opt-out</dfn>.
 
 When deployed thoughtfully, these mechanisms can improve [=people=]'s [=autonomy=]. Often,
