--- a/index.html
+++ b/index.html
@@ -1086,8 +1086,9 @@ according to their [=users=]' wishes.
 <div class="practice"><span class="practicelab">[=Sites=], [=user agents=], and other [=actors=]
 should minimize the amount of [=personal data=] they transfer.</span></div>
 
-<div class="practice"><span class="practicelab">Web APIs should be designed to minimize the amount of data that
-sites need to request.</span></div>
+<div class="practice"><span class="practicelab">Web APIs should be designed to minimize the amount of data that sites need
+to request to carry out their users' goals and provide granularity and user controls over <a>personal
+data</a> that is communicated to sites.</span></div>
 
 <div class="practice">
 <span class="practicelab">In maintaining duties of [=duty of
