--- a/index.html
+++ b/index.html
@@ -1352,9 +1352,8 @@ The many APIs available to websites expose lots of data that can be combined
 into information about people, web servers, and other things.
 
 User-controlled settings or permissions can <dfn data-lt="access guard">guard
-access</dfn> to data on the web. Whether or not exposing information is
-[=appropriate=] depends on the suitability of these [=access guards=] in
-[=context=].
+access</dfn> to data on the web. When designing a Web API, use [=access guards=]
+to ensure the API exposes information in [=appropriate=] ways.
 
 <aside class="example">
   For example, the URLs of resources, the timing of link clicks, and the referrer chain within a
