--- a/index.html
+++ b/index.html
@@ -1404,8 +1404,8 @@ better not to expose.
 </aside>
 
 New APIs that unavoidably provide access to this kind of information should
-not make that information easier to access, and nor should these APIs be
-easier to use by developers, compared to existing comparable web platform features.
+not make that information easier to access compared to existing comparable
+web platform features.
 
 These APIs should also:
 
