--- a/index.html
+++ b/index.html
@@ -1407,7 +1407,7 @@ New APIs that unavoidably provide access to this kind of information should
 not make that information easier to access compared to existing comparable
 web platform features.
 
-These APIs should also:
+Specifications describing these APIs should also:
 
 * make it clear how to remove this access in the event that future web
   platform changes make it possible to remove other access to the same
