--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ is specifically about [=privacy=] as it applies to the Web, it focuses on privac
 information flows.
 
 The Web is for everyone ([[?For-Everyone]]). It should be "<i>a platform that helps people and provides a
-net positive social benefit</i>" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
+net positive social benefit</i>" ([[?ETHICAL-WEB]]). One of the ways in which the
 Web serves people is by seeking to protect them from surveillance and the types of manipulation that data can
 enable.
 
