Some refactoring, and title attributes for what I actually want to say.

--- a/meetings/2023-09-tpac/tuesday-ac-meeting/slides.html
+++ b/meetings/2023-09-tpac/tuesday-ac-meeting/slides.html
@@ -28,16 +28,18 @@
   <!-- Alternative: Show also real time and elapsed time. -->
   <!-- <div class=fullclock></div> -->
 
-  <section class="slide cover clear" id="start">
+  <section class="slide cover clear">
     <h1>Privacy Principles</h1>
     <address>Jeffrey Yasskin</address>
     <p>★ W3C TPAC 2023, Seville, 11–15 September ★</p>
   </section>
 
   <section class="slide">
-    <h2>W3C TAG Ethical Web Principles</h2>
+    <h2 title="The Privacy Principles document elaborates on the TAG Ethical Web Principle about privacy.">TAG Ethical
+      Web Principles</h2>
     <blockquote cite="https://www.w3.org/TR/ethical-web-principles/#privacy">
-      <h3>2.5 Security and privacy are essential</h3>
+      <h3><a href="https://www.w3.org/TR/ethical-web-principles/#privacy">2.5 Security and privacy are essential</a>
+      </h3>
 
       <p>
         When we add features to the web platform, we are making decisions that may
@@ -51,14 +53,28 @@
   </section>
 
   <section class="slide">
-    <h2>Goals</h2>
+    <h2 title="We had a couple goals when drafting the document.">Goals</h2>
     <ul>
-      <li>Give <strong>API designers</strong> their privacy constraints.</li>
-      <li>Help <strong>API reviewers</strong> check for privacy protections.</li>
-      <li>Explain web-wide norms around privacy to <strong>site authors</strong> and <strong>regulators</strong>.</li>
-      <li><strong>Define the grounds</strong> on which we'll have future arguments about privacy.</li>
+      <li
+        title="Engineers work best when we have our design constraints up front, so this document describes those constraints.">
+        Define privacy constraints for <strong>Web API designers</strong>.
+      </li>
+      <li title="API reviewers also benefit from a list of things to check for.">
+        Help <strong>Web API reviewers</strong> check for privacy protections.
+      </li>
+      <li
+        title="Third, the web has norms around privacy that differ from other platforms. We're trying to explain those norms to site authors and groups in both civil society and government.">
+        Explain web-wide norms around privacy to <strong>site authors</strong> and <strong>regulators</strong>.
+      </li>
+      <li
+        title="Finally, we know that we'll keep discussing and arguing about privacy in the future. This document should give us some terminology and common ground on which to base those discussions.">
+        <strong>Define the grounds</strong> on which we'll have future discussions about privacy.
+      </li>
     </ul>
-    <h3>Non-goal: override other ethical principles</h3>
+    <h3
+      title="We don't want to imply that this document overrides other ethical principles if there are conflicts, and the document says that in a couple places.">
+      Non-goal: override other ethical principles
+    </h3>
   </section>
 
   <section class="slide">
@@ -76,12 +92,16 @@
         </figure>
       </li>
       <li>Handoff to the TAG this year</li>
-      <li>W3C Statement</li>
+      <li title="We're hoping that the whole W3C will eventually endorse the principles as a W3C Statement.">
+        W3C Statement
+      </li>
     </ul>
   </section>
 
   <section class="slide">
-    <h2>Structure</h2>
+    <h2 title="The document is split into two main sections: background knowledge and beliefs, and the actual principles we want the web to follow.">
+      Structure
+    </h2>
     <ol>
       <li>Background knowledge and beliefs</li>
       <li>Concrete principles</li>
@@ -90,7 +110,7 @@
 
   <section class="slide">
     <h2>Background beliefs</h2>
-    <p>It wasn't always clear what should go here vs the principles section.</p>
+    <p title="... but what we currently have here are the ideas that:">It wasn't always clear what should go here vs the principles section.</p>
     <ul>
       <li>Information flows need to be governed collectively.</li>
       <li>Support autonomy, with implications for consent.</li>
@@ -109,15 +129,15 @@
         <li>Information can be sensitive.</li>
         <li>People have data rights.</li>
         <li>Try to de-identify data.</li>
-        <li>Groups have privacy interests too.</li>
+        <li>Groups have privacy interests.</li>
       </ul>
       <ul>
-        <li>Balance device owners and users.</li>
+        <li>Balance device owners & users.</li>
         <li>Protect users from abuse.</li>
         <li>Support vulnerable people.</li>
+        <li>Don't retaliate.</li>
         <li>Request consent respectfully.</li>
         <li>Avoid unwanted interruptions.</li>
-        <li>Don't retaliate.</li>
         <li>Let users choose their data.</li>
       </ul>
     </div>
